qtbase-opensource-src (5.11.2+dfsg-1) UNRELEASED; urgency=medium

  [ Dmitry Shachnev ]
  * New upstreaam release.
  * Drop patches, applied upstream:
    - fix_regresion_in_QPointF_operator_equals.patch
    - fix-glibc-2.28-build.patch

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 19 Sep 2018 14:18:51 +0300

qtbase-opensource-src (5.11.1+dfsg-8) unstable; urgency=medium

  * Override dh_auto_test to avoid compiling in indep builds.
  * Refresh nonlinux_utime.diff.
  * Update symbols files from buildds’ logs.
  * Bump required qttools-dev-tools version to 5.11.1-6, where a bug in
    qdoc was fixed (closes: #908328).
  * Bump Standards-Version to 4.2.1, no changes needed.
  * Temporarily use TLS1_2_VERSION instead of TLS_MAX_VERSION, to make
    Qt Network work with OpenSSL 1.1.0 in testing (closes: #907774).

 -- Dmitry Shachnev <mitya57@debian.org>  Tue, 11 Sep 2018 13:29:28 +0300

qtbase-opensource-src (5.11.1+dfsg-7) unstable; urgency=medium

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Build depend upon libharfbuzz >= 1.6.0~ as required by the code
    (Closes: #905660). Thanks Andreas Ferber for the bug report.

  [ Simon Quigley ]
  * Fix the build with glibc 2.28.

 -- Simon Quigley <tsimonq2@ubuntu.com>  Sat, 25 Aug 2018 12:32:18 -0500

qtbase-opensource-src (5.11.1+dfsg-6) unstable; urgency=medium

  * Upload to Sid.

 -- Simon Quigley <tsimonq2@ubuntu.com>  Wed, 25 Jul 2018 04:49:30 -0500

qtbase-opensource-src (5.11.1+dfsg-5) experimental; urgency=medium

  [ Rohan Garg ]
  * Update watch url to a better path.

  [ Simon Quigley ]
  * Add patch fixing selection rendering issues if rounding leads to left-out
    pixels.

 -- Simon Quigley <tsimonq2@ubuntu.com>  Thu, 19 Jul 2018 23:33:59 -0500

qtbase-opensource-src (5.11.1+dfsg-4) experimental; urgency=medium

  * Add fix_regresion_in_QPointF_operator_equals.patch to fix wrong check in
    QPointF (Closes: #903237).
  * Update symbols files with buildds' logs.
