@@ -5,8 +5,8 @@ Last-Update: 2018-05-02
 
 --- a/src/plugins/platforms/xcb/qxcbscreen.cpp
 +++ b/src/plugins/platforms/xcb/qxcbscreen.cpp
-@@ -750,7 +750,12 @@ void QXcbScreen::updateGeometry(const QR
-         m_sizeMillimeters = sizeInMillimeters(geometry.size(), virtualDpi());
+@@ -753,7 +753,12 @@ void QXcbScreen::updateGeometry(const QR
+         m_sizeMillimeters = sizeInMillimeters(geometry.size(), m_virtualDesktop->dpi());
  
      qreal dpi = geometry.width() / physicalSize().width() * qreal(25.4);
 -    m_pixelDensity = qMax(1, qRound(dpi/96));
