@@ -17,7 +17,7 @@ Last-Update: 2018-02-22
  #    else
 --- a/src/corelib/io/qfilesystemengine_unix.cpp
 +++ b/src/corelib/io/qfilesystemengine_unix.cpp
-@@ -1449,7 +1449,7 @@ bool QFileSystemEngine::setFileTime(int
+@@ -1439,7 +1439,7 @@ bool QFileSystemEngine::setFileTime(int
          return false;
      }
  
